--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  display: grid;
+  min-height: 100vh;
+  place-items: center;
 }/*# sourceMappingURL=main.css.map */
