--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,11 +7,13 @@
 }
 
 body {
+  background-color: hsl(218, 23%, 16%);
   display: grid;
   min-height: 100vh;
   place-items: center;
 }
 
 .card {
+  background-color: hsl(217, 19%, 24%);
   text-align: center;
 }/*# sourceMappingURL=main.css.map */
