--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,11 @@
+/* manrope-800 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../assets/fonts/manrope-v15-latin-800.woff2") format("woff2");
+}
 *,
 *::after,
 *::before {
@@ -9,6 +17,8 @@
 body {
   background-color: hsl(218, 23%, 16%);
   display: grid;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
   min-height: 100vh;
   place-items: center;
 }
