--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @use "./variables";
+@use "./fonts";
 
 *,
 *::after,
@@ -11,6 +12,8 @@
 body {
   background-color: variables.$color-dark-blue;
   display: grid;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
   min-height: 100vh;
   place-items: center;
 }
