Set text colors

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,4 +21,12 @@ body {
 .card {
   background-color: variables.$color-dark-grayish-blue;
   text-align: center;
+
+  &__id {
+    color: variables.$color-neon-green;
+  }
+
+  &__advice {
+    color: variables.$color-light-cyan;
+  }
 }
