--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,4 +26,10 @@ body {
 .card {
   background-color: hsl(217, 19%, 24%);
   text-align: center;
+}
+.card__id {
+  color: hsl(150, 100%, 66%);
+}
+.card__advice {
+  color: hsl(193, 38%, 86%);
 }/*# sourceMappingURL=main.css.map */
