--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,9 @@ body {
 
   &__id {
     color: variables.$color-neon-green;
+    font-size: 12px;
+    letter-spacing: 2.8px;
+    text-transform: uppercase;
   }
 
   &__advice {
