Add padding on card

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@ body {
 .card {
   background-color: variables.$color-dark-grayish-blue;
   margin: 16px;
+  padding: 42px 26px;
   text-align: center;
 
   &__id {
