--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,6 +26,7 @@ body {
 .card {
   background-color: hsl(217, 19%, 24%);
   margin: 16px;
+  padding: 42px 26px;
   text-align: center;
 }
 .card__id {
