--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@ body {
     color: variables.$color-neon-green;
     font-size: 12px;
     letter-spacing: 2.8px;
+    margin-bottom: 26px;
     text-transform: uppercase;
   }
 
