Change advice margin bottom to 26px

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,4 +39,5 @@ body {
 .card__advice {
   color: hsl(193, 38%, 86%);
   font-size: 23.5px;
+  margin-bottom: 26px;
 }/*# sourceMappingURL=main.css.map */
