--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,6 +25,7 @@ body {
 
 .card {
   background-color: hsl(217, 19%, 24%);
+  border-radius: 10px;
   margin: 16px;
   padding: 42px 26px;
   text-align: center;
