--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@ body {
 
 .card {
   background-color: variables.$color-dark-grayish-blue;
+  border-radius: 10px;
   margin: 16px;
   padding: 42px 26px;
   text-align: center;
