--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,4 +41,13 @@ body {
   color: hsl(193, 38%, 86%);
   font-size: 23.5px;
   margin-bottom: 26px;
+}
+.card__button {
+  background-color: hsl(150, 100%, 66%);
+  border: 0;
+  border-radius: 50%;
+  padding: 20px;
+}
+.card__icon {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
