--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,4 +38,15 @@ body {
     font-size: 23.5px;
     margin-bottom: 26px;
   }
+
+  &__button {
+    background-color: variables.$color-neon-green;
+    border: 0;
+    border-radius: 50%;
+    padding: 20px;
+  }
+
+  &__icon {
+    display: block;
+  }
 }
