--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,6 +28,7 @@ body {
   border-radius: 10px;
   margin: 16px;
   padding: 42px 26px;
+  position: relative;
   text-align: center;
 }
 .card__id {
@@ -46,7 +47,11 @@ body {
   background-color: hsl(150, 100%, 66%);
   border: 0;
   border-radius: 50%;
+  bottom: 0;
+  left: 50%;
   padding: 20px;
+  position: absolute;
+  transform: translate(-50%, 50%);
 }
 .card__icon {
   display: block;
