--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@ body {
   border-radius: 10px;
   margin: 16px;
   padding: 42px 26px;
+  position: relative;
   text-align: center;
 
   &__id {
@@ -43,7 +44,11 @@ body {
     background-color: variables.$color-neon-green;
     border: 0;
     border-radius: 50%;
+    bottom: 0;
+    left: 50%;
     padding: 20px;
+    position: absolute;
+    transform: translate(-50%, 50%);
   }
 
   &__icon {
