--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@ body {
   border-radius: 10px;
   margin: 16px;
   padding: 42px 26px;
+  padding-bottom: 58px;
   position: relative;
   text-align: center;
 
