--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,12 +21,12 @@ body {
   font-weight: 800;
   min-height: 100vh;
   place-items: center;
+  padding: 16px;
 }
 
 .card {
   background-color: hsl(217, 19%, 24%);
   border-radius: 10px;
-  margin: 16px;
   padding: 42px 26px;
   padding-bottom: 58px;
   position: relative;
