--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,10 +49,16 @@ body {
   border: 0;
   border-radius: 50%;
   bottom: 0;
+  cursor: pointer;
   left: 50%;
   padding: 20px;
   position: absolute;
   transform: translate(-50%, 50%);
+  transition: box-shadow 0.1s;
+}
+.card__button:hover {
+  box-shadow: 0 0 18px 14px rgba(82, 255, 168, 0.3);
+  filter: saturate(1.2);
 }
 .card__icon {
   display: block;
