--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,10 +46,17 @@ body {
     border: 0;
     border-radius: 50%;
     bottom: 0;
+    cursor: pointer;
     left: 50%;
     padding: 20px;
     position: absolute;
     transform: translate(-50%, 50%);
+    transition: box-shadow 0.1s;
+
+    &:hover {
+      box-shadow: 0 0 18px 14px rgba(variables.$color-neon-green, 0.3);
+      filter: saturate(1.2);
+    }
   }
 
   &__icon {
