--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@ body {
   padding-bottom: 58px;
   position: relative;
   text-align: center;
+  max-width: 540px;
 
   &__id {
     color: variables.$color-neon-green;
