Style desktop version

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,4 +63,20 @@ body {
   &__icon {
     display: block;
   }
+
+  @media screen and (min-width: 768px) {
+    & {
+      padding: 48px 42px 68px 42px;
+    }
+
+    &__id {
+      font-size: 14.2px;
+      letter-spacing: 3.2px;
+    }
+
+    &__advice {
+      font-size: 28px;
+      margin-bottom: 40px;
+    }
+  }
 }
