--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,18 @@ $color-neon-green: hsl(150, 100%, 66%);
 $color-grayish-blue: hsl(217, 19%, 38%);
 $color-dark-grayish-blue: hsl(217, 19%, 24%);
 $color-dark-blue: hsl(218, 23%, 16%);
+
+// Containers
+$max-width-card: 540px;
+
+// Text
+$font-family-primary: "Manrope", sans-serif;
+$font-size-id-mobile: 12px;
+$letter-spacing-id-mobile: 2.8px;
+$letter-spacing-id-desktop: 3.2px;
+$font-size-id-desktop: 14.2px;
+$font-size-advice-mobile: 23.5px;
+$font-size-advice-desktop: 28px;
+
+// Breakpoints
+$breakpoint-md: 768px;
