--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,6 +68,18 @@
   margin: 0;
 }
 
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 body {
   background-color: hsl(218, 23%, 16%);
   display: grid;
