--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,18 +13,18 @@
   padding-bottom: 58px;
   position: relative;
   text-align: center;
-  max-width: 540px;
+  max-width: 33.75rem;
 }
 .card__id {
   color: hsl(150, 100%, 66%);
-  font-size: 12px;
-  letter-spacing: 2.8px;
+  font-size: 0.75rem;
+  letter-spacing: 0.175rem;
   margin-bottom: 26px;
   text-transform: uppercase;
 }
 .card__advice {
   color: hsl(193, 38%, 86%);
-  font-size: 23.5px;
+  font-size: 1.46875rem;
   margin-bottom: 26px;
 }
 .card__button {
@@ -46,16 +46,16 @@
 .card__icon {
   display: block;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .card {
     padding: 48px 42px 68px 42px;
   }
   .card__id {
-    font-size: 14.2px;
-    letter-spacing: 3.2px;
+    font-size: 0.8875rem;
+    letter-spacing: 0.2rem;
   }
   .card__advice {
-    font-size: 28px;
+    font-size: 1.75rem;
     margin-bottom: 40px;
   }
 }
