--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,4 +93,16 @@ body {
 .disabled {
   cursor: not-allowed;
   filter: grayscale(0.8);
+}
+.disabled > img {
+  animation: loading 0.65s infinite linear;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }/*# sourceMappingURL=main.css.map */
