--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,4 +35,18 @@ body {
 .disabled {
   cursor: not-allowed;
   filter: grayscale(0.8);
+
+  & > img {
+    animation: loading 0.65s infinite linear;
+  }
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
