--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,6 +45,18 @@ body {
   }
 }
 
+@keyframes grow-and-show {
+  from {
+    transform: scale(0.85);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1.0);
+    opacity: 1;
+  }
+}
+
 @keyframes loading {
   from {
     transform: rotate(0deg);
