--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @use "./variables";
+@use "./animations";
 @use "./fonts";
 @use "./card";
 
@@ -42,27 +43,5 @@ body {
 
   & > img {
     animation: loading 0.65s infinite linear;
-  }
-}
-
-@keyframes grow-and-show {
-  from {
-    transform: scale(0.85);
-    opacity: 0;
-  }
-
-  to {
-    transform: scale(1.0);
-    opacity: 1;
-  }
-}
-
-@keyframes loading {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
   }
 }
