Make animation less linear

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -118,5 +118,5 @@ body {
   filter: grayscale(0.8);
 }
 .disabled > img {
-  animation: loading 0.65s infinite linear;
+  animation: loading 0.75s infinite ease-in-out;
 }/*# sourceMappingURL=main.css.map */
