--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,8 @@ $color-grayish-blue: hsl(217, 19%, 38%);
 $color-dark-grayish-blue: hsl(217, 19%, 24%);
 $color-dark-blue: hsl(218, 23%, 16%);
 
+$color-light-red: hsl(0, 100%, 66%);
+
 // Containers
 $max-width-card: 33.75rem; // 540px
 
