--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,19 +2,8 @@
 @use "./variables";
 @use "./animations";
 @use "./fonts";
+@use "./accessibility";
 @use "./card";
-
-.sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
 
 body {
   background-color: variables.$color-dark-blue;
