Change footer color

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,7 +101,7 @@
 
 .footer {
   bottom: 10px;
-  color: white;
+  color: hsl(193, 38%, 86%);
   font-size: 0.875rem;
   position: absolute;
   text-align: center;
