--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   bottom: 10px;
-  color: white;
+  color: variables.$color-light-cyan;
   font-size: 0.875rem;
   position: absolute;
   text-align: center;
